# HotelBookingService

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
app/: config.py  db.py  main.py
app/crud/: booking.py  room.py
app/models/: booking.py  room.py
app/routers/: bookings.py  rooms.py
app/schemas/: booking.py  room.py
tests/: conftest.py
tests/integration/: test_room_integration.py
tests/unit/: test_config.py  test_crud_booking.py  test_crud_rooms.py
