[tool.poetry]
name = "hotel-booking-service"
version = "0.1.0"
description = ""
authors = ["Alex <es01@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest = "^8.3.3"
uvicorn = "^0.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
